temporarily use config.js

--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "test": "mocha --R spec"
   },
   "dependencies": {
-    "chalk": "~0.4.0",
-    "underscore.string": "^2.3.3"
+    "chalk": "^0.4.0",
+    "lodash": "^2.4.1"
   },
   "devDependencies": {
     "verb": "~0.1.20"
