--- a/.jshintrc
+++ b/.jshintrc
@@ -1,11 +1,14 @@
 {
-  "esnext": true,
+  "asi": false,
   "boss": true,
   "curly": true,
   "eqeqeq": true,
   "eqnull": true,
+  "esnext": true,
   "immed": true,
-  "latedef": true,
+  "latedef": false,
+  "laxcomma": false,
+  "mocha": true,
   "newcap": true,
   "noarg": true,
   "node": true,
