--- a/package.json
+++ b/package.json
@@ -1,18 +1,12 @@
 {
   "name": "verbalize",
-  "version": "0.1.1",
   "description": "A lightweight command line logging utility, with verbose mode and colors by chalk.",
+  "version": "0.1.1",
+  "homepage": "https://github.com/jonschlinkert/verbalize",
   "author": {
     "name": "Jon Schlinkert",
     "url": "https://github.com/jonschlinkert"
   },
-  "homepage": "https://github.com/jonschlinkert/verbalize",
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/jonschlinkert/verbalize/blob/master/LICENSE-MIT"
-    }
-  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/jonschlinkert/verbalize.git"
@@ -20,9 +14,21 @@
   "bugs": {
     "url": "https://github.com/jonschlinkert/verbalize/issues"
   },
+  "license": {
+    "type": "MIT",
+    "url": "https://github.com/jonschlinkert/verbalize/blob/master/LICENSE"
+  },
+  "files": [
+    "index.js",
+    "lib/"
+  ],
   "main": "index.js",
+  "engines": {
+    "node": ">=0.10.0",
+    "npm": ">=1.2.10"
+  },
   "scripts": {
-    "test": "mocha --R spec"
+    "test": "mocha"
   },
   "dependencies": {
     "ansi-styles": "^1.1.0",
@@ -30,13 +36,7 @@
     "lodash": "^2.4.1"
   },
   "devDependencies": {
-    "mocha": "*",
-    "verb": "^0.2.14",
-    "verb-tag-jscomments": ">= 0.1.4"
-  },
-  "engines": {
-    "node": ">=0.10.0",
-    "npm": ">=1.2.10"
+    "mocha": "*"
   },
   "keywords": [
     "256",
