--- a/package.json
+++ b/package.json
@@ -31,13 +31,18 @@
     "chalk": "^1.1.1",
     "component-emitter": "^1.2.0",
     "define-property": "^0.2.5",
+    "extend-shallow": "^2.0.1",
+    "get-value": "^2.0.3",
     "lazy-cache": "^1.0.3",
     "minimist": "^1.2.0",
+    "set-value": "^0.3.3",
     "strip-color": "^0.1.0",
     "time-diff": "^0.1.0",
     "use": "^1.1.2"
   },
   "devDependencies": {
+    "base": "^0.7.3",
+    "base-option": "^0.6.1",
     "mocha": "*"
   },
   "keywords": [
