--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "set-value": "^0.3.3",
     "strip-color": "^0.1.0",
     "time-diff": "^0.1.0",
+    "union-value": "^0.2.3",
     "use": "^1.1.2"
   },
   "devDependencies": {
