--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "falsey": "^0.3.0",
     "get-value": "^2.0.3",
     "lazy-cache": "^1.0.3",
-    "log-events": "^0.1.0",
+    "log-events": "^0.1.1",
     "set-value": "^0.3.3",
     "strip-color": "^0.1.0",
     "use": "^1.1.2"
@@ -43,9 +43,7 @@
     "base-option": "^0.6.1",
     "chalk": "^1.1.1",
     "component-emitter": "^1.2.0",
-    "minimist": "^1.2.0",
-    "mocha": "*",
-    "union-value": "^0.2.3"
+    "minimist": "^1.2.0"
   },
   "keywords": [
     "256",
