--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "ansi-bold": "^0.1.1",
     "ansi-underline": "^0.1.1",
+    "base-is-enabled": "^0.1.0",
     "define-property": "^0.2.5",
     "extend-shallow": "^2.0.1",
     "falsey": "^0.3.0",
